--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react-scripts": "3.4.1",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
-    "uuid": "^8.2.0"
+    "uuid": "^8.2.0",
+    "validator": "^13.5.2"
   },
   "scripts": {
     "start": "react-scripts start",
